Backed out changeset 8b81c3399a9c (bug 1724043) for causing wpt lint failures. CLOSED TREE
UltraBlame original commit: 14dd483e27af9a55dc8ff7bcea37b52de6e55e59

--- a/dom/html/test/dialog/test_dialog_cancel_preventDefault.html
+++ b/dom/html/test/dialog/test_dialog_cancel_preventDefault.html
@@ -1,10 +1,34 @@
 <
 !
 DOCTYPE
-html
+HTML
 >
 <
 html
+>
+<
+!
+-
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1322947
+-
+-
 >
 <
 head
@@ -13,16 +37,9 @@ head
 title
 >
 Test
-cancel
-event
-with
-preventDefault
-on
-keydown
-event
 for
-dialog
-element
+Bug
+1322947
 <
 /
 title
@@ -33,9 +50,11 @@ src
 =
 "
 /
-resources
+tests
 /
-testharness
+SimpleTest
+/
+SimpleTest
 .
 js
 "
@@ -50,64 +69,11 @@ src
 =
 "
 /
-resources
+tests
 /
-testharnessreport
-.
-js
-"
->
-<
+SimpleTest
 /
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
--
-vendor
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
--
-actions
+EventUtils
 .
 js
 "
@@ -121,7 +87,52 @@ link
 rel
 =
 "
-help
+stylesheet
+"
+type
+=
+"
+text
+/
+css
+"
+href
+=
+"
+/
+tests
+/
+SimpleTest
+/
+test
+.
+css
+"
+/
+>
+<
+/
+head
+>
+<
+body
+onload
+=
+"
+SimpleTest
+.
+waitForFocus
+(
+runTest
+)
+"
+>
+<
+a
+target
+=
+"
+_blank
 "
 href
 =
@@ -145,27 +156,29 @@ id
 1322947
 "
 >
-<
-/
-head
->
-<
-body
->
-<
-p
->
 Test
 cancel
 event
 with
 preventDefault
 on
-keydown
+cancel
 event
 for
 dialog
 element
+<
+/
+a
+>
+<
+p
+id
+=
+"
+display
+"
+>
 <
 /
 p
@@ -187,15 +200,27 @@ p
 dialog
 >
 <
-script
+pre
+id
+=
+"
+test
+"
 >
-setup
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+>
+SimpleTest
+.
+waitForExplicitFinish
 (
-{
-single_test
-:
-true
-}
 )
 ;
 var
@@ -203,6 +228,11 @@ hasCancelEventFired
 =
 false
 ;
+function
+runTest
+(
+)
+{
 const
 dialog
 =
@@ -223,28 +253,12 @@ verify
 =
 >
 {
-assert_false
+ok
 (
 hasCancelEventFired
 "
 cancel
-should
-not
-be
-fired
-"
-)
-;
-assert_true
-(
-hasKeydownEventFired
-"
-document
-level
-keydown
-event
-should
-be
+is
 fired
 "
 )
@@ -254,7 +268,6 @@ done
 )
 ;
 }
-;
 dialog
 .
 addEventListener
@@ -268,25 +281,6 @@ event
 )
 {
 hasCancelEventFired
-=
-true
-;
-}
-)
-;
-document
-.
-addEventListener
-(
-"
-keydown
-"
-function
-(
-event
-)
-{
-hasKeydownEventFired
 =
 true
 ;
@@ -309,6 +303,32 @@ verify
 }
 0
 )
+}
+)
+;
+dialog
+.
+addEventListener
+(
+"
+close
+"
+function
+(
+)
+{
+ok
+(
+false
+"
+close
+event
+should
+not
+be
+fired
+"
+)
 ;
 }
 )
@@ -319,38 +339,36 @@ showModal
 (
 )
 ;
-const
-escKey
-=
+synthesizeKey
+(
 "
-\
-uE00C
+VK_ESCAPE
 "
+{
+}
+window
+)
 ;
-new
-test_driver
-.
-Actions
+}
+function
+done
 (
 )
+{
+SimpleTest
 .
-keyDown
-(
-escKey
-)
-.
-keyUp
-(
-escKey
-)
-.
-send
+finish
 (
 )
 ;
+}
 <
 /
 script
+>
+<
+/
+pre
 >
 <
 /
