--- a/dom/html/test/dialog/test_dialog_cancel_with_select.html
+++ b/dom/html/test/dialog/test_dialog_cancel_with_select.html
@@ -1,10 +1,34 @@
 <
 !
 DOCTYPE
-html
+HTML
 >
 <
 html
+>
+<
+!
+-
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1322947
+-
+-
 >
 <
 head
@@ -13,16 +37,9 @@ head
 title
 >
 Test
-dialog
-modal
-is
-closed
-by
-escape
-key
-with
-select
-focused
+for
+Bug
+1322947
 <
 /
 title
@@ -33,9 +50,11 @@ src
 =
 "
 /
-resources
+tests
 /
-testharness
+SimpleTest
+/
+SimpleTest
 .
 js
 "
@@ -50,64 +69,11 @@ src
 =
 "
 /
-resources
+tests
 /
-testharnessreport
-.
-js
-"
->
-<
+SimpleTest
 /
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
--
-vendor
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
--
-actions
+EventUtils
 .
 js
 "
@@ -121,7 +87,52 @@ link
 rel
 =
 "
-help
+stylesheet
+"
+type
+=
+"
+text
+/
+css
+"
+href
+=
+"
+/
+tests
+/
+SimpleTest
+/
+test
+.
+css
+"
+/
+>
+<
+/
+head
+>
+<
+body
+onload
+=
+"
+SimpleTest
+.
+waitForFocus
+(
+runTest
+)
+"
+>
+<
+a
+target
+=
+"
+_blank
 "
 href
 =
@@ -145,16 +156,6 @@ id
 1322947
 "
 >
-<
-/
-head
->
-<
-body
->
-<
-p
->
 Test
 dialog
 modal
@@ -163,9 +164,18 @@ closed
 by
 escape
 key
-with
-select
-focused
+<
+/
+a
+>
+<
+p
+id
+=
+"
+display
+"
+>
 <
 /
 p
@@ -216,17 +226,34 @@ select
 dialog
 >
 <
-script
+pre
+id
+=
+"
+test
+"
 >
-setup
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+>
+SimpleTest
+.
+waitForExplicitFinish
 (
-{
-single_test
-:
-true
-}
 )
 ;
+function
+runTest
+(
+)
+{
 const
 dialog
 =
@@ -262,11 +289,11 @@ function
 (
 )
 {
-assert_false
+ok
 (
 dialog
 .
-open
+close
 "
 dialog
 with
@@ -289,7 +316,7 @@ showModal
 (
 )
 ;
-assert_true
+ok
 (
 select
 =
@@ -306,38 +333,36 @@ focused
 "
 )
 ;
-const
-escKey
-=
+synthesizeKey
+(
 "
-\
-uE00C
+VK_ESCAPE
 "
+{
+}
+window
+)
 ;
-new
-test_driver
-.
-Actions
+}
+function
+done
 (
 )
+{
+SimpleTest
 .
-keyDown
-(
-escKey
-)
-.
-keyUp
-(
-escKey
-)
-.
-send
+finish
 (
 )
 ;
+}
 <
 /
 script
+>
+<
+/
+pre
 >
 <
 /
