--- a/dom/html/test/dialog/test_cancelDialogByEscape.html
+++ b/dom/html/test/dialog/test_cancelDialogByEscape.html
@@ -1,10 +1,34 @@
 <
 !
 DOCTYPE
-html
+HTML
 >
 <
 html
+>
+<
+!
+-
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1322947
+-
+-
 >
 <
 head
@@ -13,16 +37,9 @@ head
 title
 >
 Test
-dialog
-modal
-is
-closed
-by
-escape
-key
-with
-input
-focused
+for
+Bug
+1322947
 <
 /
 title
@@ -33,9 +50,11 @@ src
 =
 "
 /
-resources
+tests
 /
-testharness
+SimpleTest
+/
+SimpleTest
 .
 js
 "
@@ -50,64 +69,11 @@ src
 =
 "
 /
-resources
+tests
 /
-testharnessreport
-.
-js
-"
->
-<
+SimpleTest
 /
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
--
-vendor
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
--
-actions
+EventUtils
 .
 js
 "
@@ -121,7 +87,52 @@ link
 rel
 =
 "
-help
+stylesheet
+"
+type
+=
+"
+text
+/
+css
+"
+href
+=
+"
+/
+tests
+/
+SimpleTest
+/
+test
+.
+css
+"
+/
+>
+<
+/
+head
+>
+<
+body
+onload
+=
+"
+SimpleTest
+.
+waitForFocus
+(
+runTest
+)
+"
+>
+<
+a
+target
+=
+"
+_blank
 "
 href
 =
@@ -145,16 +156,6 @@ id
 1322947
 "
 >
-<
-/
-head
->
-<
-body
->
-<
-p
->
 Test
 dialog
 modal
@@ -163,9 +164,18 @@ closed
 by
 escape
 key
-with
-input
-focused
+<
+/
+a
+>
+<
+p
+id
+=
+"
+display
+"
+>
 <
 /
 p
@@ -209,55 +219,28 @@ autofocus
 dialog
 >
 <
+pre
+id
+=
+"
+test
+"
+>
+<
 script
->
-setup
-(
-{
-single_test
-:
-true
-}
-)
-;
-const
-triggerEscKey
-=
-(
-)
-=
->
-{
-const
-escKey
+type
 =
 "
-\
-uE00C
+application
+/
+javascript
 "
-;
-new
-test_driver
+>
+SimpleTest
 .
-Actions
+waitForExplicitFinish
 (
 )
-.
-keyDown
-(
-escKey
-)
-.
-keyUp
-(
-escKey
-)
-.
-send
-(
-)
-;
-}
 ;
 /
 *
@@ -317,11 +300,11 @@ function
 (
 )
 {
-assert_false
+ok
 (
 dialog
 .
-open
+close
 "
 dialog
 with
@@ -345,7 +328,7 @@ showModal
 (
 )
 ;
-assert_true
+ok
 (
 input
 =
@@ -362,11 +345,22 @@ focused
 "
 )
 ;
-triggerEscKey
+synthesizeKey
 (
+"
+VK_ESCAPE
+"
+{
+}
+window
 )
 ;
 }
+function
+runTest
+(
+)
+{
 const
 dialog
 =
@@ -390,11 +384,11 @@ function
 (
 )
 {
-assert_false
+ok
 (
 dialog
 .
-open
+close
 "
 dialog
 closed
@@ -424,10 +418,29 @@ showModal
 (
 )
 ;
-triggerEscKey
+synthesizeKey
+(
+"
+VK_ESCAPE
+"
+{
+}
+window
+)
+;
+}
+function
+done
+(
+)
+{
+SimpleTest
+.
+finish
 (
 )
 ;
+}
 <
 /
 script
