--- a/dom/html/test/dialog/test_dialog_cancel_events.html
+++ b/dom/html/test/dialog/test_dialog_cancel_events.html
@@ -1,10 +1,34 @@
 <
 !
 DOCTYPE
-html
+HTML
 >
 <
 html
+>
+<
+!
+-
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1322947
+-
+-
 >
 <
 head
@@ -13,18 +37,9 @@ head
 title
 >
 Test
-cancel
-event
-is
-fired
-when
-the
-dialog
-is
-closed
-by
-user
-interaction
+for
+Bug
+1322947
 <
 /
 title
@@ -35,9 +50,11 @@ src
 =
 "
 /
-resources
+tests
 /
-testharness
+SimpleTest
+/
+SimpleTest
 .
 js
 "
@@ -52,64 +69,11 @@ src
 =
 "
 /
-resources
+tests
 /
-testharnessreport
-.
-js
-"
->
-<
+SimpleTest
 /
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
--
-vendor
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-/
-resources
-/
-testdriver
--
-actions
+EventUtils
 .
 js
 "
@@ -123,7 +87,49 @@ link
 rel
 =
 "
-help
+stylesheet
+"
+type
+=
+"
+text
+/
+css
+"
+href
+=
+"
+/
+tests
+/
+SimpleTest
+/
+test
+.
+css
+"
+/
+>
+<
+/
+head
+>
+<
+body
+onload
+=
+"
+runTest
+(
+)
+"
+>
+<
+a
+target
+=
+"
+_blank
 "
 href
 =
@@ -147,16 +153,6 @@ id
 1322947
 "
 >
-<
-/
-head
->
-<
-body
->
-<
-p
->
 Test
 cancel
 event
@@ -170,6 +166,18 @@ closed
 by
 user
 interaction
+<
+/
+a
+>
+<
+p
+id
+=
+"
+display
+"
+>
 <
 /
 p
@@ -191,15 +199,27 @@ p
 dialog
 >
 <
-script
+pre
+id
+=
+"
+test
+"
 >
-setup
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+>
+SimpleTest
+.
+waitForExplicitFinish
 (
-{
-single_test
-:
-true
-}
 )
 ;
 var
@@ -212,6 +232,11 @@ hasCloseEventFired
 =
 false
 ;
+function
+runTest
+(
+)
+{
 const
 dialog
 =
@@ -236,7 +261,7 @@ function
 event
 )
 {
-assert_true
+ok
 (
 true
 "
@@ -247,7 +272,7 @@ fired
 "
 )
 ;
-assert_true
+ok
 (
 event
 .
@@ -261,8 +286,9 @@ cancelable
 "
 )
 ;
-assert_false
+ok
 (
+!
 hasCancelEventFired
 "
 cancel
@@ -275,8 +301,9 @@ once
 "
 )
 ;
-assert_false
+ok
 (
+!
 hasCloseEventFired
 "
 close
@@ -308,7 +335,7 @@ function
 (
 )
 {
-assert_true
+ok
 (
 true
 "
@@ -319,8 +346,9 @@ fired
 "
 )
 ;
-assert_false
+ok
 (
+!
 hasCloseEventFired
 "
 close
@@ -333,7 +361,7 @@ once
 "
 )
 ;
-assert_true
+ok
 (
 hasCancelEventFired
 "
@@ -365,38 +393,36 @@ showModal
 (
 )
 ;
-const
-escKey
-=
+synthesizeKey
+(
 "
-\
-uE00C
+VK_ESCAPE
 "
+{
+}
+window
+)
 ;
-new
-test_driver
-.
-Actions
+}
+function
+done
 (
 )
+{
+SimpleTest
 .
-keyDown
-(
-escKey
-)
-.
-keyUp
-(
-escKey
-)
-.
-send
+finish
 (
 )
 ;
+}
 <
 /
 script
+>
+<
+/
+pre
 >
 <
 /
