Bug 1724043 - Port dialog cancel event tests to WPT. r=sefeng
Differential Revision: https://phabricator.services.mozilla.com/D121762

UltraBlame original commit: cfa10a4a1854eef78677915329bd549b02490926

--- a/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-cancel-preventDefault.html
+++ b/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-cancel-preventDefault.html
@@ -1,160 +1,16 @@
 <
 !
 DOCTYPE
-HTML
+html
 >
 <
 html
 >
 <
-!
--
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1322947
--
--
->
-<
 head
 >
 <
 title
->
-Test
-for
-Bug
-1322947
-<
-/
-title
->
-<
-script
-src
-=
-"
-/
-tests
-/
-SimpleTest
-/
-SimpleTest
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-/
-tests
-/
-SimpleTest
-/
-EventUtils
-.
-js
-"
->
-<
-/
-script
->
-<
-link
-rel
-=
-"
-stylesheet
-"
-type
-=
-"
-text
-/
-css
-"
-href
-=
-"
-/
-tests
-/
-SimpleTest
-/
-test
-.
-css
-"
-/
->
-<
-/
-head
->
-<
-body
-onload
-=
-"
-SimpleTest
-.
-waitForFocus
-(
-runTest
-)
-"
->
-<
-a
-target
-=
-"
-_blank
-"
-href
-=
-"
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1322947
-"
 >
 Test
 cancel
@@ -169,16 +25,147 @@ dialog
 element
 <
 /
-a
+title
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testharness
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testharnessreport
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+vendor
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+actions
+.
+js
+"
+>
+<
+/
+script
+>
+<
+link
+rel
+=
+"
+help
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1322947
+"
+>
+<
+/
+head
+>
+<
+body
 >
 <
 p
-id
-=
-"
-display
-"
 >
+Test
+cancel
+event
+with
+preventDefault
+on
+cancel
+event
+for
+dialog
+element
 <
 /
 p
@@ -200,27 +187,15 @@ p
 dialog
 >
 <
-pre
-id
-=
-"
-test
-"
->
-<
 script
-type
-=
-"
-application
-/
-javascript
-"
 >
-SimpleTest
-.
-waitForExplicitFinish
+setup
 (
+{
+single_test
+:
+true
+}
 )
 ;
 var
@@ -228,11 +203,6 @@ hasCancelEventFired
 =
 false
 ;
-function
-runTest
-(
-)
-{
 const
 dialog
 =
@@ -253,7 +223,7 @@ verify
 =
 >
 {
-ok
+assert_true
 (
 hasCancelEventFired
 "
@@ -268,6 +238,7 @@ done
 )
 ;
 }
+;
 dialog
 .
 addEventListener
@@ -290,7 +261,7 @@ preventDefault
 (
 )
 ;
-setTimeout
+step_timeout
 (
 function
 (
@@ -317,7 +288,7 @@ function
 (
 )
 {
-ok
+assert_true
 (
 false
 "
@@ -339,36 +310,38 @@ showModal
 (
 )
 ;
-synthesizeKey
-(
+const
+escKey
+=
 "
-VK_ESCAPE
+\
+uE00C
 "
-{
-}
-window
-)
 ;
-}
-function
-done
-(
-)
-{
-SimpleTest
+new
+test_driver
 .
-finish
+Actions
+(
+)
+.
+keyDown
+(
+escKey
+)
+.
+keyUp
+(
+escKey
+)
+.
+send
 (
 )
 ;
-}
 <
 /
 script
->
-<
-/
-pre
 >
 <
 /
