--- a/netwerk/test/mochitests/test_accept_header.html
+++ b/netwerk/test/mochitests/test_accept_header.html
@@ -268,6 +268,9 @@ q
 9
 image
 /
+avif
+image
+/
 webp
 *
 /
@@ -369,6 +372,9 @@ test_last_request_and_continue
 image
 "
 "
+image
+/
+avif
 image
 /
 webp
