--- a/accessible/tests/mochitest/events/test_namechange.html
+++ b/accessible/tests/mochitest/events/test_namechange.html
@@ -701,6 +701,60 @@ setAttr
 tst1
 "
 "
+alt
+"
+"
+alt
+"
+new
+unexpectedInvokerChecker
+(
+EVENT_NAME_CHANGE
+"
+tst1
+"
+)
+)
+)
+;
+gQueue
+.
+push
+(
+new
+setAttr
+(
+"
+tst1
+"
+"
+title
+"
+"
+title
+"
+new
+unexpectedInvokerChecker
+(
+EVENT_NAME_CHANGE
+"
+tst1
+"
+)
+)
+)
+;
+gQueue
+.
+push
+(
+new
+setAttr
+(
+"
+tst1
+"
+"
 aria
 -
 labelledby
@@ -709,61 +763,7 @@ labelledby
 display
 "
 new
-unexpectedInvokerChecker
-(
-EVENT_NAME_CHANGE
-"
-tst1
-"
-)
-)
-)
-;
-gQueue
-.
-push
-(
-new
-setAttr
-(
-"
-tst1
-"
-"
-alt
-"
-"
-alt
-"
-new
-unexpectedInvokerChecker
-(
-EVENT_NAME_CHANGE
-"
-tst1
-"
-)
-)
-)
-;
-gQueue
-.
-push
-(
-new
-setAttr
-(
-"
-tst1
-"
-"
-title
-"
-"
-title
-"
-new
-unexpectedInvokerChecker
+invokerChecker
 (
 EVENT_NAME_CHANGE
 "
@@ -844,6 +844,35 @@ title
 "
 "
 title
+"
+new
+unexpectedInvokerChecker
+(
+EVENT_NAME_CHANGE
+"
+tst2
+"
+)
+)
+)
+;
+gQueue
+.
+push
+(
+new
+setAttr
+(
+"
+tst2
+"
+"
+aria
+-
+label
+"
+"
+hi
 "
 new
 unexpectedInvokerChecker
