--- a/testing/web-platform/tests/css/css-scroll-snap/overflowing-snap-areas.html
+++ b/testing/web-platform/tests/css/css-scroll-snap/overflowing-snap-areas.html
@@ -161,6 +161,14 @@ align
 :
 start
 ;
+height
+:
+400px
+;
+width
+:
+400px
+;
 }
 .
 large
@@ -170,10 +178,6 @@ x
 width
 :
 3000px
-;
-height
-:
-400px
 ;
 background
 -
@@ -187,10 +191,6 @@ large
 -
 y
 {
-width
-:
-400px
-;
 height
 :
 2000px
@@ -199,7 +199,7 @@ background
 -
 color
 :
-green
+yellow
 ;
 }
 .
@@ -617,6 +617,166 @@ div
 div
 >
 <
+div
+class
+=
+"
+scroller
+-
+x
+"
+id
+=
+"
+overlapping
+-
+overflow
+"
+style
+=
+"
+scroll
+-
+snap
+-
+type
+:
+both
+mandatory
+"
+>
+<
+div
+class
+=
+"
+space
+"
+>
+<
+/
+div
+>
+<
+div
+style
+=
+"
+left
+:
+200px
+;
+top
+:
+200px
+;
+"
+>
+<
+div
+class
+=
+"
+target
+small
+"
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+small
+"
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+small
+"
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+large
+-
+y
+large
+-
+x
+"
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+small
+"
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+small
+"
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+target
+small
+"
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
 script
 >
 var
@@ -668,6 +828,20 @@ getElementById
 two
 -
 axes
+"
+)
+;
+var
+overlapping_scroller
+=
+document
+.
+getElementById
+(
+"
+overlapping
+-
+overflow
 "
 )
 ;
@@ -1525,6 +1699,146 @@ axis
 "
 )
 ;
+test
+(
+(
+)
+=
+>
+{
+overlapping_scroller
+.
+scrollTo
+(
+200
+800
+)
+;
+assert_equals
+(
+overlapping_scroller
+.
+scrollLeft
+200
+)
+;
+assert_equals
+(
+overlapping_scroller
+.
+scrollTop
+800
+)
+;
+}
+"
+snap
+to
+current
+scroll
+position
+on
+y
+as
+the
+area
+is
+covering
+y
+axis
+"
++
+"
+even
+though
+that
+area
+is
+not
+the
+only
+scroll
+area
+at
+the
+same
+position
+.
+"
+)
+;
+test
+(
+(
+)
+=
+>
+{
+overlapping_scroller
+.
+scrollTo
+(
+800
+200
+)
+;
+assert_equals
+(
+overlapping_scroller
+.
+scrollLeft
+800
+)
+;
+assert_equals
+(
+overlapping_scroller
+.
+scrollTop
+200
+)
+;
+}
+"
+snap
+to
+current
+scroll
+position
+on
+x
+as
+the
+area
+is
+covering
+x
+axis
+"
++
+"
+even
+though
+that
+area
+is
+not
+the
+only
+scroll
+area
+at
+the
+same
+position
+.
+"
+)
+;
+<
+/
+script
+>
 <
 /
 script
