Bug 1724306 [wpt PR 29865] - [WPT] Deflake inert-retargeting-iframe.tentative.html, a=testonly
Automatic update from web-platform-tests
[WPT] Deflake inert-retargeting-iframe.tentative.html

This test seems flaky on Android where the events sometimes take more
than 2 seconds to fire on a local emulator. Increasing the timeout to
5 seconds and also round the pointer move positions to fix an exception
in the ChromeDriver, which expects integer coordinates.

Bug: None
Change-Id: Ibf13381bfb664ce7deb054f2a35868e2008279e9
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3061921
Reviewed-by: Rayan Kanso <rayankanschromium.org>
Commit-Queue: Richard Knoll <knollrchromium.org>
Cr-Commit-Position: refs/heads/master{#907522}

--

wpt-commits: ab1ef741b6457a3c459c0230f209e25254d02ab0
wpt-pr: 29865

UltraBlame original commit: ff801882a0dbc202b6685d4a7b1abfc783027628

--- a/testing/web-platform/tests/inert/inert-retargeting-iframe.tentative.html
+++ b/testing/web-platform/tests/inert/inert-retargeting-iframe.tentative.html
@@ -870,8 +870,18 @@ Actions
 .
 pointerMove
 (
+Math
+.
+ceil
+(
 x
+)
+Math
+.
+ceil
+(
 y
+)
 {
 origin
 :
@@ -1013,7 +1023,7 @@ id
 )
 ;
 }
-1000
+5000
 )
 ;
 }
