Bug 1722052 [wpt PR 29766] - [LayoutNG] Relative offsets and nested fixedpos elements in a multicol, a=testonly
Automatic update from web-platform-tests
[LayoutNG] Relative offsets and nested fixedpos elements in a multicol

The static position of a nested fixedpos in a multicol was not affected
by the relative offset of its ancestor, specifically any relative
offset that occurred before the fixedpos reached its CB. To fix this,
calculate the relative offset that exists between the fixedpos and its
CB, and apply that relative offset to the static position of the
fixedpos descendant.

Note that unlike the relative offset that occurs within the fixedpos'
containing block chain, this relative offset is getting applied to
the static position before fragmentation takes place. The reason being
that we would have otherwise needed to store a separate relative offset
for this case that would be applied after fragmentation, but only if
the final offset of the fixedpos was affected by its static position.
Applying the relative offset before fragmentation in this case matches
Firefox's behavior and seems to make more sense conceptually.

Bug: 1218313
Change-Id: Id1aea608f2406cda061418e9ea8c6f9f5e01cd86
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3045640
Reviewed-by: Morten Stenshorne <mstenshochromium.org>
Commit-Queue: Alison Maher <almahermicrosoft.com>
Cr-Commit-Position: refs/heads/master{#907593}

--

wpt-commits: 26747abd6a4d9ea2c26ad2720b82cfcd8df06922
wpt-pr: 29766

UltraBlame original commit: c0a828e66bb5fe758b0cfeb8eddd8bdca1eebef2

--- a/testing/web-platform/tests/css/css-break/out-of-flow-in-multicolumn-073.html
+++ b/testing/web-platform/tests/css/css-break/out-of-flow-in-multicolumn-073.html
@@ -6,17 +6,15 @@ html
 <
 title
 >
-Relative
-insets
-apply
-to
-nested
+Nested
 fixedpos
-in
-a
-multicol
-after
-fragmentation
+should
+be
+affected
+by
+relative
+positioned
+offset
 .
 <
 /
@@ -46,12 +44,14 @@ TR
 /
 css
 -
-break
+position
 -
 3
 /
 #
-transforms
+abspos
+-
+breaking
 "
 >
 <
@@ -88,9 +88,7 @@ style
 .
 multicol
 {
-column
--
-count
+columns
 :
 2
 ;
@@ -100,12 +98,6 @@ fill
 :
 auto
 ;
-column
--
-gap
-:
-0px
-;
 height
 :
 100px
@@ -114,27 +106,49 @@ width
 :
 100px
 ;
-margin
+column
 -
-left
+gap
 :
--
-200px
+0px
 ;
 margin
 -
 top
 :
 -
-50px
+100px
+;
+margin
+-
+left
+:
+-
+150px
 ;
 }
 .
-rel
+box
+{
+width
+:
+50px
+;
+height
+:
+200px
+;
+}
+.
+fixed
 {
 position
 :
-relative
+fixed
+;
+background
+:
+green
 ;
 }
 .
@@ -146,24 +160,19 @@ absolute
 ;
 }
 .
-fixed
+rel
 {
 position
 :
-fixed
+relative
 ;
-width
+top
 :
-100
-%
+100px
 ;
-height
+left
 :
-200px
-;
-background
-:
-green
+50px
 ;
 }
 <
@@ -215,31 +224,12 @@ rel
 style
 =
 "
-top
-:
-50px
-;
-left
-:
-50px
-;
-"
->
-<
-div
-style
-=
-"
 transform
 :
 translateX
 (
 0
 )
-;
-height
-:
-200px
 ;
 "
 >
@@ -249,17 +239,14 @@ class
 =
 "
 abs
+box
 "
 style
 =
 "
-width
+background
 :
-50px
-;
-height
-:
-200px
+red
 ;
 top
 :
@@ -267,11 +254,7 @@ top
 ;
 left
 :
-100px
-;
-background
-:
-red
+50px
 ;
 "
 >
@@ -285,26 +268,6 @@ class
 =
 "
 rel
-"
-style
-=
-"
-top
-:
-100px
-;
-left
-:
-100px
-;
-"
->
-<
-div
-class
-=
-"
-abs
 "
 >
 <
@@ -321,23 +284,8 @@ class
 =
 "
 fixed
+box
 "
-style
-=
-"
-background
-:
-green
-;
-"
->
-<
-/
-div
->
-<
-/
-div
 >
 <
 /
