Bug 1721286 [wpt PR 29712] - [LayoutNG] OOF with inline CB relative offset, a=testonly
Automatic update from web-platform-tests
[LayoutNG] OOF with inline CB relative offset

This CL started off as a follow-up to CL:2995308. CL:2995308 had
added support for handling relative offsets for inline containing
blocks when inside a multicol, such that the relative offset is
applied to the OOF descendants after fragmentation has taken place.

There was a concern around writing mode conversions, so in attempt
to find any problems, I updated the tests added in CL:3025848 to
apply a relative offset to inline CBs in various writing mode
scenarios. No problems were discovered with the property added in
CL:2995308, but a more general bug was discovered, unrelated to
fragmentation.

The bug that this CL addresses is specific to when a relative
offset is applied to an inline CB when the writing mode is
vertical-lr. The problem appeared to be with the fact that
ComputeRelativeOffsetForInline() reverses the offset direction
in vertical-lr. This offset is then added to the static position
of the OOF descendant, resulting in the OOF shifting in the
opposite direction than expected.

To fix this, remove any relative offsets from the OOF inline
ancestors when calling PropagateChildData() to avoid the incorrect
relative offset being added to the static position. Instead, a new
method was added, called ComputeRelativeOffsetForOOFInInline(), that
will calculate the relative offset to use when applying to an OOF
descendant.

An accumulated relative offset for OOFs is now calculated in
NGInlineLayoutStateStack::ApplyRelativePositioning() using
ComputeRelativeOffsetForOOFInInline(). This accumulated offset is then
applied to the OOF descendant's static position when it is
first discovered. It is also applied to the inline relative_offset
stored in OutOfFlowPositionedNode when the OOF's inline_container is
discovered (so it can be applied after fragmentation has taken
place).

Note: ComputeRela

--- a/testing/web-platform/tests/css/css-position/static-position/vlr-ltr-ltr.html
+++ b/testing/web-platform/tests/css/css-position/static-position/vlr-ltr-ltr.html
@@ -164,6 +164,10 @@ margin
 0
 16px
 ;
+padding
+:
+2px
+;
 }
 .
 red
@@ -179,6 +183,22 @@ cb
 position
 :
 relative
+;
+inset
+-
+block
+-
+start
+:
+2px
+;
+inset
+-
+inline
+-
+start
+:
+2px
 ;
 }
 .
