--- a/testing/web-platform/tests/css/css-position/static-position/vlr-ltr-rtl.tentative.html
+++ b/testing/web-platform/tests/css/css-position/static-position/vlr-ltr-rtl.tentative.html
@@ -164,6 +164,10 @@ margin
 0
 16px
 ;
+padding
+:
+2px
+;
 }
 .
 red
@@ -179,6 +183,22 @@ cb
 position
 :
 relative
+;
+inset
+-
+block
+-
+start
+:
+2px
+;
+inset
+-
+inline
+-
+start
+:
+2px
 ;
 }
 .
