Bug 1723428 [wpt PR 29863] - [WPT] Distinguish Document base URL, Document URL, and inline script base URL in dynamic-import, a=testonly
Automatic update from web-platform-tests
[WPT] Distinguish Document base URL, Document URL, and inline script base URL in dynamic-import

This exposes Chromium bugs:

- The base URL of dynamic imports from event handlers is
  Document URL while it should be Document base URL
  (crbug.com/1235202)
- The base URL of dynamic imports from setTimeout is
  Document base URL while it should be initiating script's base URL
  (crbug.com/1133238)

Bug: 1133238, 1235202
Change-Id: I8d9af692af29fbbe02bdacca2a4e320c2d565f80
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3066340
Commit-Queue: Hiroshige Hayashizaki <hiroshigechromium.org>
Reviewed-by: Domenic Denicola <domenicchromium.org>
Cr-Commit-Position: refs/heads/master{#907686}

--

wpt-commits: c09a17632e8ac975a135a26681c43ec5270ff11f
wpt-pr: 29863

UltraBlame original commit: a9ca53262fa2913ca0ea9d35a16ad4b5bc45aa7f

--- a/testing/web-platform/tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/string-compilation-base-url-external-classic.html
+++ b/testing/web-platform/tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/string-compilation-base-url-external-classic.html
@@ -112,8 +112,130 @@ dummy
 div
 >
 <
+base
+href
+=
+"
+scripts
+/
+foo
+/
+"
+>
+<
 script
 >
+/
+/
+Tweak
+the
+base
+URL
+of
+the
+document
+here
+to
+distinguish
+:
+/
+/
+-
+document
+URL
+/
+/
+-
+document
+base
+URL
+=
+.
+.
+/
+/
+/
+-
+External
+scripts
+'
+base
+URL
+=
+.
+/
+scripts
+/
+eval
+.
+js
+etc
+.
+/
+/
+-
+This
+inline
+script
+'
+s
+base
+URL
+=
+.
+/
+scripts
+/
+foo
+/
+document
+.
+querySelector
+(
+"
+base
+"
+)
+.
+remove
+(
+)
+;
+const
+base
+=
+document
+.
+createElement
+(
+"
+base
+"
+)
+;
+base
+.
+setAttribute
+(
+"
+href
+"
+"
+.
+.
+/
+"
+)
+;
+document
+.
+body
+.
+appendChild
+(
+base
+)
+;
 function
 load
 (
@@ -280,6 +402,10 @@ label
 ;
 load
 (
+dynamic
+-
+import
+/
 scripts
 /
 {
