--- a/testing/web-platform/tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/string-compilation-base-url-external-module.html
+++ b/testing/web-platform/tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/string-compilation-base-url-external-module.html
@@ -112,6 +112,17 @@ dummy
 div
 >
 <
+base
+href
+=
+"
+scripts
+/
+foo
+/
+"
+>
+<
 script
 type
 =
@@ -119,6 +130,117 @@ type
 module
 "
 >
+/
+/
+Tweak
+the
+base
+URL
+of
+the
+document
+here
+to
+distinguish
+:
+/
+/
+-
+document
+URL
+/
+/
+-
+document
+base
+URL
+=
+.
+.
+/
+/
+/
+-
+External
+scripts
+'
+base
+URL
+=
+.
+/
+scripts
+/
+eval
+.
+js
+etc
+.
+/
+/
+-
+This
+inline
+script
+'
+s
+base
+URL
+=
+.
+/
+scripts
+/
+foo
+/
+document
+.
+querySelector
+(
+"
+base
+"
+)
+.
+remove
+(
+)
+;
+const
+base
+=
+document
+.
+createElement
+(
+"
+base
+"
+)
+;
+base
+.
+setAttribute
+(
+"
+href
+"
+"
+.
+.
+/
+"
+)
+;
+document
+.
+body
+.
+appendChild
+(
+base
+)
+;
 function
 load
 (
@@ -293,6 +415,10 @@ label
 ;
 load
 (
+dynamic
+-
+import
+/
 scripts
 /
 {
