--- a/testing/web-platform/tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/string-compilation-base-url-inline-classic.html
+++ b/testing/web-platform/tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/string-compilation-base-url-inline-classic.html
@@ -67,15 +67,6 @@ me
 "
 >
 <
-base
-href
-=
-"
-.
-.
-"
->
-<
 script
 src
 =
@@ -110,6 +101,9 @@ js
 script
 >
 <
+body
+>
+<
 div
 id
 =
@@ -122,8 +116,112 @@ dummy
 div
 >
 <
+base
+href
+=
+"
+scripts
+/
+foo
+/
+"
+>
+<
 script
 >
+/
+/
+Tweak
+the
+base
+URL
+of
+the
+document
+here
+to
+distinguish
+:
+/
+/
+-
+document
+URL
+/
+/
+-
+document
+base
+URL
+=
+.
+.
+/
+/
+/
+-
+This
+inline
+script
+'
+s
+base
+URL
+=
+.
+/
+scripts
+/
+foo
+/
+document
+.
+querySelector
+(
+"
+base
+"
+)
+.
+remove
+(
+)
+;
+const
+base
+=
+document
+.
+createElement
+(
+"
+base
+"
+)
+;
+base
+.
+setAttribute
+(
+"
+href
+"
+"
+.
+.
+/
+"
+)
+;
+document
+.
+body
+.
+appendChild
+(
+base
+)
+;
 function
 createTestPromise
 (
@@ -169,115 +267,12 @@ dummy
 "
 )
 ;
-const
-evaluators
-=
-{
-setTimeout
-eval
-"
-the
-Function
-constructor
-"
+function
+doTest
 (
-x
-)
-{
-Function
-(
-x
-)
-(
-)
-;
-}
-"
-reflected
-inline
-event
-handlers
-"
-(
-x
-)
-{
-dummyDiv
-.
-setAttribute
-(
-"
-onclick
-"
-x
-)
-;
-dummyDiv
-.
-onclick
-(
-)
-;
-}
-"
-inline
-event
-handlers
-triggered
-via
-UA
-code
-"
-(
-x
-)
-{
-dummyDiv
-.
-setAttribute
-(
-"
-onclick
-"
-x
-)
-;
-dummyDiv
-.
-click
-(
-)
-;
-/
-/
-different
-from
-.
-*
-*
-on
-*
-*
-click
-(
-)
-}
-}
-;
-for
-(
-const
-[
 label
 evaluator
-]
-of
-Object
-.
-entries
-(
-evaluators
-)
+path
 )
 {
 promise_test
@@ -324,7 +319,9 @@ evaluator
 import
 (
 '
-.
+{
+path
+}
 /
 imports
 -
@@ -415,6 +412,191 @@ import
 )
 ;
 }
+/
+/
+Inline
+script
+'
+s
+base
+URL
+should
+be
+used
+.
+doTest
+(
+"
+setTimeout
+"
+setTimeout
+"
+.
+.
+/
+.
+.
+/
+.
+.
+"
+)
+;
+doTest
+(
+"
+eval
+"
+eval
+"
+.
+.
+/
+.
+.
+/
+.
+.
+"
+)
+;
+doTest
+(
+"
+the
+Function
+constructor
+"
+(
+x
+)
+=
+>
+{
+Function
+(
+x
+)
+(
+)
+;
+}
+"
+.
+.
+/
+.
+.
+/
+.
+.
+"
+)
+;
+/
+/
+Document
+'
+s
+base
+URL
+should
+be
+used
+as
+there
+are
+no
+active
+scripts
+.
+doTest
+(
+"
+reflected
+inline
+event
+handlers
+"
+(
+x
+)
+=
+>
+{
+dummyDiv
+.
+setAttribute
+(
+"
+onclick
+"
+x
+)
+;
+dummyDiv
+.
+onclick
+(
+)
+;
+}
+"
+.
+"
+)
+;
+doTest
+(
+"
+inline
+event
+handlers
+triggered
+via
+UA
+code
+"
+(
+x
+)
+=
+>
+{
+dummyDiv
+.
+setAttribute
+(
+"
+onclick
+"
+x
+)
+;
+dummyDiv
+.
+click
+(
+)
+;
+/
+/
+different
+from
+.
+*
+*
+on
+*
+*
+click
+(
+)
+}
+"
+.
+"
+)
 ;
 <
 /
