--- a/testing/web-platform/tests/html/semantics/scripting-1/the-script-element/module/instantiation-error-3.html
+++ b/testing/web-platform/tests/html/semantics/scripting-1/the-script-element/module/instantiation-error-3.html
@@ -152,25 +152,86 @@ ev
 =
 >
 {
-const
-msg
-=
+assert_equals
+(
+log
+.
+length
+6
+'
+Log
+length
+'
+)
+;
+assert_equals
+(
+log
+[
+1
+]
+1
+)
+;
+assert_equals
+(
+log
+[
+3
+]
+2
+)
+;
+assert_equals
+(
+log
+[
+5
+]
+3
+)
+;
+assert_not_equals
+(
 log
 [
 0
 ]
+log
+[
+2
+]
+'
+Instantiation
+error
+objects
+for
+different
+root
+scripts
+'
+)
 ;
-assert_array_equals
+assert_equals
 (
 log
 [
-msg
-1
-msg
-2
-msg
-3
+0
 ]
+log
+[
+4
+]
+'
+Instantiation
+error
+objects
+for
+the
+same
+root
+script
+'
 )
 ;
 }
