--- a/testing/web-platform/tests/html/semantics/scripting-1/the-script-element/module/instantiation-error-5.html
+++ b/testing/web-platform/tests/html/semantics/scripting-1/the-script-element/module/instantiation-error-5.html
@@ -153,23 +153,55 @@ ev
 =
 >
 {
-const
-msg
-=
+assert_equals
+(
+log
+.
+length
+4
+'
+Log
+length
+'
+)
+;
+assert_equals
+(
+log
+[
+1
+]
+1
+)
+;
+assert_equals
+(
+log
+[
+3
+]
+2
+)
+;
+assert_not_equals
+(
 log
 [
 0
 ]
-;
-assert_array_equals
-(
 log
 [
-msg
-1
-msg
 2
 ]
+'
+Instantiation
+error
+objects
+for
+different
+root
+scripts
+'
 )
 ;
 }
