Bug 1719687 [wpt PR 29612] - Update split-cache.html test., a=testonly
Automatic update from web-platform-tests
Update split-cache.html test. (#29612)

This test was requesting the same resource using fetch and using
navigations. Navigation are request with credentials. The fetch requests
weren't.

This patch updates the test to make the fetch request to send
credentials. This ensures passing this test is not simply the
consequence of discriminating anonymous and credentialled request in the
HTTP cache, but really about implementing a split cache.

This ensures implementing:
https://docs.google.com/document/d/1lvbiy4n-GM5I56Ncw304sgvY5Td32R6KHitjRXvkZ6U/edit#heading=h.i5fo7881c05m
won't cause one test case of this test to pass when split cache is
disabled.
https://chromium-review.googlesource.com/c/chromium/src/+/2964120/7/third_party/blink/web_tests/virtual/not-split-http-cache/external/wpt/fetch/http-cache/split-cache-expected.txt

Bug: 1221529
Change-Id: I3e7fdfa1a21570b5128f87238238aea4a92a8a0f
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3015115
Commit-Queue: Arthur Sonzogni <arthursonzognichromium.org>
Reviewed-by: Maksim Orlovich <morlovichchromium.org>
Cr-Commit-Position: refs/heads/master{#906681}

Co-authored-by: Arthur Sonzogni <arthursonzognichromium.org>
--

wpt-commits: e8da13e1e02247dc203675d76aa1baf162de6a26
wpt-pr: 29612

UltraBlame original commit: 81548cf5d4117675643bb0a41d190414a45dc1fd

--- a/testing/web-platform/tests/fetch/http-cache/split-cache.html
+++ b/testing/web-platform/tests/fetch/http-cache/split-cache.html
@@ -319,6 +319,75 @@ replace
 '
 )
 ;
+/
+/
+Note
+:
+Navigation
+requests
+are
+requested
+with
+credentials
+.
+Make
+sure
+the
+/
+/
+fetch
+requests
+are
+also
+requested
+with
+credentials
+.
+This
+ensures
+passing
+/
+/
+this
+test
+is
+not
+simply
+the
+consequence
+of
+discriminating
+anonymous
+and
+/
+/
+credentialled
+request
+in
+the
+HTTP
+cache
+.
+/
+/
+/
+/
+See
+https
+:
+/
+/
+github
+.
+com
+/
+whatwg
+/
+fetch
+/
+issues
+/
+1253
 var
 test
 =
@@ -344,15 +413,53 @@ Expires
 60
 )
 ]
+[
+"
+Access
+-
+Control
+-
+Allow
+-
+Origin
+"
+POPUP_HTTP_ORIGIN
+]
 ]
 base_url
 :
 localBaseURL
+credentials
+:
+"
+include
+"
 }
 {
+response_headers
+:
+[
+[
+"
+Access
+-
+Control
+-
+Allow
+-
+Origin
+"
+POPUP_HTTP_ORIGIN
+]
+]
 base_url
 :
 localBaseURL
+credentials
+:
+"
+include
+"
 }
 {
 request_headers
@@ -369,6 +476,22 @@ no
 -
 cache
 "
+]
+]
+response_headers
+:
+[
+[
+"
+Access
+-
+Control
+-
+Allow
+-
+Origin
+"
+POPUP_HTTP_ORIGIN
 ]
 ]
 /
@@ -475,6 +598,11 @@ is_cross_site_test
 base_url
 :
 localBaseURL
+credentials
+:
+"
+include
+"
 }
 ]
 }
