Bug 1723804 [wpt PR 29882] - [WPT] Account for rounding differences in IntersectionObserver, a=testonly
Automatic update from web-platform-tests
[WPT] Account for rounding differences in IntersectionObserver

On some platforms and screen / chrome size combinations we might end up
with rounding differences between the rects returned by
IntersectionObserver and getBoundingClientRect(). This will allow for
these differences.

Bug: 1191163
Change-Id: If5b227bb7cee2a28eebe08f692e2085a1519f983
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3069264
Reviewed-by: Stefan Zager <szagerchromium.org>
Commit-Queue: Richard Knoll <knollrchromium.org>
Cr-Commit-Position: refs/heads/master{#908083}

--

wpt-commits: 05ab32fbc857cdbd3ca542472ea9ee93721388fc
wpt-pr: 29882

UltraBlame original commit: b7739a120a558fcc2f79ec0cd71f76c925303a2d

--- a/testing/web-platform/tests/intersection-observer/intersection-ratio-ib-split.html
+++ b/testing/web-platform/tests/intersection-observer/intersection-ratio-ib-split.html
@@ -210,6 +210,26 @@ inline
 <
 script
 >
+/
+/
+Account
+for
+rounding
+differences
+when
+viewport
+sizes
+can
+'
+t
+cleanly
+divide
+.
+const
+epsilon
+=
+1
+;
 promise_test
 (
 async
@@ -327,7 +347,7 @@ r2
 label
 )
 {
-assert_equals
+assert_approx_equals
 (
 r1
 .
@@ -335,6 +355,7 @@ top
 r2
 .
 top
+epsilon
 label
 +
 "
@@ -346,7 +367,7 @@ equal
 "
 )
 ;
-assert_equals
+assert_approx_equals
 (
 r1
 .
@@ -354,6 +375,7 @@ right
 r2
 .
 right
+epsilon
 label
 +
 "
@@ -365,7 +387,7 @@ equal
 "
 )
 ;
-assert_equals
+assert_approx_equals
 (
 r1
 .
@@ -373,6 +395,7 @@ bottom
 r2
 .
 bottom
+epsilon
 label
 +
 "
@@ -384,7 +407,7 @@ equal
 "
 )
 ;
-assert_equals
+assert_approx_equals
 (
 r1
 .
@@ -392,6 +415,7 @@ left
 r2
 .
 left
+epsilon
 label
 +
 "
