Bug 1722371 [wpt PR 29788] - Make <selectmenu>'s parts search always a flat tree traversal that skips nested <selectmenu>s., a=testonly
Automatic update from web-platform-tests
Make <selectmenu>'s parts search always a flat tree traversal that skips nested <selectmenu>s.

Per an OpenUI resolution [1], a <selectmenu>'s search for parts should
be a flat tree traversal that doesn't descend into nested <selectmenu>
or <select> elements.

This change updates <selectmenu> to use the resolved-upon behavior.
As a consequence, the parts chosen depend only on tree structure, not
on the order of insertion for dynamically inserted parts.

[1] See https://www.w3.org/2021/06/17-openui-irc

Bug: 1209219,1191121
Change-Id: Ia68c782b7972317b8e6abdcfff5e52ece34a3ed0
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3053078
Reviewed-by: Mason Freed <masonfchromium.org>
Reviewed-by: Ionel Popescu <iopopescmicrosoft.com>
Commit-Queue: Dan Clark <daniecmicrosoft.com>
Cr-Commit-Position: refs/heads/master{#908088}

--

wpt-commits: b2622d1b8cae70d07ae349c3a061382078652a21
wpt-pr: 29788

UltraBlame original commit: 301d234e2a096ddaa7bc2b5b068da5a04d4a45f3

--- a/testing/web-platform/tests/html/semantics/forms/the-selectmenu-element/selectmenu-popup.tentative.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-selectmenu-element/selectmenu-popup.tentative.html
@@ -316,6 +316,57 @@ div
 selectmenu
 >
 <
+selectmenu
+id
+=
+"
+selectMenu3
+"
+>
+<
+div
+slot
+=
+"
+listbox
+"
+>
+<
+popup
+part
+=
+"
+listbox
+"
+id
+=
+"
+selectMenu3
+-
+listbox
+"
+>
+<
+option
+>
+one
+<
+/
+option
+>
+<
+/
+popup
+>
+<
+/
+div
+>
+<
+/
+selectmenu
+>
+<
 script
 >
 function
@@ -795,6 +846,37 @@ value
 "
 )
 ;
+/
+/
+TODO
+(
+crbug
+.
+com
+/
+1234899
+)
+Fails
+because
+listbox
+pointer
+isn
+'
+t
+cleared
+when
+default
+listbox
+is
+swapped
+out
+due
+to
+initial
+<
+slot
+>
+replacement
 assert_equals
 (
 selectMenu2
@@ -812,6 +894,85 @@ with
 no
 listbox
 part
+does
+nothing
+"
+)
+;
+promise_test
+(
+async
+(
+)
+=
+>
+{
+const
+selectMenu3
+=
+document
+.
+getElementById
+(
+"
+selectMenu3
+"
+)
+;
+const
+selectMenu3Listbox
+=
+document
+.
+getElementById
+(
+"
+selectMenu3
+-
+listbox
+"
+)
+;
+selectMenu3Listbox
+.
+remove
+(
+)
+;
+await
+clickOn
+(
+selectMenu3
+)
+;
+assert_equals
+(
+selectMenu3
+.
+value
+"
+"
+)
+;
+assert_equals
+(
+selectMenu3
+.
+open
+false
+)
+;
+}
+"
+Clicking
+a
+popup
+with
+a
+listbox
+that
+was
+removed
 does
 nothing
 "
