Bug 1722284 [wpt PR 29784] - [Anonymous iframe] Improve test for popup, a=testonly
Automatic update from web-platform-tests
[Anonymous iframe] Improve test for popup (#29784)

Bug: 1229998
Change-Id: Idf9dcbca1bd5c0e255fcf14279abbadfd8d0651e
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3053483
Reviewed-by: Arthur Sonzogni <arthursonzognichromium.org>
Commit-Queue: Yifan Luo <lyfchromium.org>
Cr-Commit-Position: refs/heads/master{#905198}

Co-authored-by: Yifan Luo <lyfchromium.org>
--

wpt-commits: 503837aa8428ae813611fc74b3eed45a64e9a2ba
wpt-pr: 29784

UltraBlame original commit: 3c60a40bae24ecea5cfd9d5c9f02a4fbf8df68f8

--- a/testing/web-platform/tests/html/cross-origin-embedder-policy/anonymous-iframe/anonymous-iframe-popup.tentative.https.html
+++ b/testing/web-platform/tests/html/cross-origin-embedder-policy/anonymous-iframe/anonymous-iframe-popup.tentative.https.html
@@ -78,6 +78,48 @@ js
 script
 >
 <
+script
+src
+=
+"
+.
+.
+/
+credentialless
+/
+resources
+/
+common
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+.
+.
+/
+credentialless
+/
+resources
+/
+dispatcher
+.
+js
+"
+>
+<
+/
+script
+>
+<
 body
 >
 <
@@ -261,19 +303,29 @@ t
 =
 >
 {
-src_popup
+const
+control_token
+=
+token
+(
+)
+;
+const
+control_src
 =
 REMOTE_ORIGIN
 +
-/
-common
-/
-blank
-.
-html
+executor_path
++
+&
+uuid
+=
+{
+control_token
+}
 ;
 const
-popup_1
+control_popup
 =
 control_iframe
 .
@@ -281,12 +333,30 @@ contentWindow
 .
 open
 (
-src_popup
+control_src
+)
+;
+add_completion_callback
+(
+(
+)
+=
+>
+send
+(
+control_token
+"
+close
+(
+)
+;
+"
+)
 )
 ;
 assert_equals
 (
-popup_1
+control_popup
 .
 opener
 control_iframe
@@ -305,7 +375,28 @@ available
 )
 ;
 const
-popup_2
+anonymous_token
+=
+token
+(
+)
+;
+const
+anonymous_src
+=
+REMOTE_ORIGIN
++
+executor_path
++
+&
+uuid
+=
+{
+anonymous_token
+}
+;
+const
+anonymous_popup
 =
 anonymous_iframe
 .
@@ -313,12 +404,30 @@ contentWindow
 .
 open
 (
-src_popup
+anonymous_src
+)
+;
+add_completion_callback
+(
+(
+)
+=
+>
+send
+(
+anonymous_token
+"
+close
+(
+)
+;
+"
+)
 )
 ;
 assert_equals
 (
-popup_2
+anonymous_popup
 null
 "
 Opener
@@ -381,19 +490,29 @@ t
 =
 >
 {
-src_popup
+const
+control_token
 =
-ORIGIN
-+
-/
-common
-/
-blank
-.
-html
+token
+(
+)
 ;
 const
-popup_1
+control_src
+=
+REMOTE_ORIGIN
++
+executor_path
++
+&
+uuid
+=
+{
+control_token
+}
+;
+const
+control_popup
 =
 control_iframe
 .
@@ -401,12 +520,30 @@ contentWindow
 .
 open
 (
-src_popup
+control_src
+)
+;
+add_completion_callback
+(
+(
+)
+=
+>
+send
+(
+control_token
+"
+close
+(
+)
+;
+"
+)
 )
 ;
 assert_equals
 (
-popup_1
+control_popup
 .
 opener
 control_iframe
@@ -425,7 +562,28 @@ available
 )
 ;
 const
-popup_2
+anonymous_token
+=
+token
+(
+)
+;
+const
+anonymous_src
+=
+REMOTE_ORIGIN
++
+executor_path
++
+&
+uuid
+=
+{
+anonymous_token
+}
+;
+const
+anonymous_popup
 =
 anonymous_iframe
 .
@@ -433,12 +591,30 @@ contentWindow
 .
 open
 (
-src_popup
+anonymous_src
+)
+;
+add_completion_callback
+(
+(
+)
+=
+>
+send
+(
+anonymous_token
+"
+close
+(
+)
+;
+"
+)
 )
 ;
 assert_equals
 (
-popup_2
+anonymous_popup
 null
 "
 Opener
